k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soniva-service
  namespace: soniva
  labels:
    app.kubernetes.io/name: soniva
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: soniva
